Pulse tabs affected by menu items.

BUG=776615

Change-Id: Ic3b4ecc8c241db2a28d3eb3a0ac318ff770bf5af